--- a/package.json
+++ b/package.json
@@ -28,8 +28,9 @@
     "@nestjs/passport": "^10.0.1",
     "@nestjs/platform-express": "^10.0.0",
     "@nestjs/typeorm": "^10.0.0",
+    "@types/cache-manager": "^4.0.6",
     "bcrypt": "^5.1.1",
-    "cache-manager": "^5.2.3",
+    "cache-manager": "^5.3.1",
     "class-transformer": "^0.5.1",
     "class-validator": "^0.14.0",
     "passport": "^0.6.0",
